--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,10 +1,13 @@
+@import './utils';
+@import './components';
+
 @import './users';
 @import './posts';
 
 body {
     width: 100vw;
     height: 100vh;
-    background-color: #eee;
+    background-color: $background-color;
 }
 
 // div {
