--- a/src/styles/users.scss
+++ b/src/styles/users.scss
@@ -32,23 +32,38 @@
     @media screen and (max-width: 550px) {
         display: none;
     }
+    top: 0;
+    left: 0;
+    position: fixed;
 
     height: 100vh;
     padding-left: 20px;
 
-    background-color: rgb(192, 198, 204);
+    background-color: lighten($background-color, 10%);
     border-right: 3px solid rgb(98, 98, 98);
 
     max-width: 250px;
-    overflow: hidden;
+    width: 25vw;
+    min-width: 150px;
+    overflow: scroll;
+
+    h1 {
+        font-weight: bold;
+        margin-top: 6px;
+
+        a {
+            color: $primary-color;
+            text-decoration: none;
+        }
+    }
 }
 
 .user-link {
     text-decoration: none;
-    color: rgb(11, 0, 49);
-    transition: color 1s;
+    color: $primary-text-color;
+    transition: color 0.5s;
 }
 
 .user-link:hover {
-    color:rgb(44, 0, 122)
+    color:$link-highlight-color;
 }
