Add user profile to user pages, reply count, loading

--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -1,5 +1,6 @@
 $primary-color: #610094;
 $secondary-color: #3F0071;
+$tertiary-color: #2F0061;
 
 $background-color: #000000;
 $post-color: #150050;
