--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -1,19 +1,46 @@
 .reaction-button {
     border-radius: 1rem;
-    margin: 5px;
+    font-size: 0.8rem;
+    margin-left: 10px;
     border: 1px solid rgb(89, 89, 89);
-    background-color: $post-color;
+    background-color: transparent;
     transition: background-color 0.4s;
     padding-left: 5px;
     padding-right: 5px;
 
     &:hover {
-        background-color: lighten($post-color, 10%);
+        background-color: $post-color;
     }
 
     .reaction-count {
         margin-left: 6px;
         color: $secondary-text-color;
         font-size: 0.8rem;
+    }
+}
+
+.reaction-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.login-box {
+    position: fixed;
+    top: 5px;
+    right: 5px;
+    background-color: $primary-color;
+    color: $primary-text-color;
+    padding: 8px;
+    border-radius: 5px;
+    transition: background-color 0.4s;
+
+    h1 {
+        margin: 0;
+        font-size: 1.4rem;
+    }
+
+    &:hover {
+        background-color: lighten($primary-color, 10%);
     }
 }
