--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -7,23 +7,51 @@
     flex-direction: row;
 
     .post-profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 100px;
+        margin-right: 10px;
+
+        p {
+            margin: 0;
+            font-size: 0.8rem;
+            color: $secondary-text-color;
+        }
+
+        .profile-image {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+        }
         flex: 1;
     }
     
     .post-body {
-        margin-bottom: 10px;
         flex: 4;
         color: $primary-text-color;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         
         footer {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            color: $secondary-text-color;
+            font-size: 0.8rem;
         }
     
         p {
             margin: 0;
         }
+    }
+
+    transition: background-color 0.3s;
+
+    &:hover {
+        background-color: lighten($post-color, 10%);
     }
 }
 
@@ -34,4 +62,9 @@
 
     max-width: 800px;
     margin-left: min(25vw, 250px);
+
+    .no-posts {
+        color: $secondary-text-color;
+        margin-left: 20px;
+    }
 }
