--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -26,15 +26,14 @@
 }
 
 .login-box {
-    position: fixed;
-    top: 5px;
-    right: 5px;
     background-color: $primary-color;
     color: $primary-text-color;
-    padding: 8px;
     border-radius: 5px;
-    transition: background-color 0.4s;
-
+    border: none;
+    padding-inline: 10px;
+    font-size: 1.2rem;
+    transition: 0.4s;
+    
     h1 {
         margin: 0;
         font-size: 1.4rem;
@@ -42,5 +41,6 @@
 
     &:hover {
         background-color: lighten($primary-color, 10%);
+        font-size: 1.3rem;
     }
 }
