--- a/src/styles/users.scss
+++ b/src/styles/users.scss
@@ -24,7 +24,7 @@
         height: 40px;
         border-radius: 50%;
         margin-right: 5px;
-        border: 2px solid rgb(11, 0, 49);
+        border: 1px solid $background-color;
     }
 }
 
@@ -40,7 +40,7 @@
     padding-left: 20px;
 
     background-color: lighten($background-color, 10%);
-    border-right: 3px solid rgb(98, 98, 98);
+    border-right: 1px solid lighten($background-color, 15%);
 
     max-width: 250px;
     width: 25vw;
