--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -10,4 +10,43 @@
     align-items: center;
 
     padding-inline: 10px;
+
+    
+    .signed-in {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        * {
+            margin-inline: 10px;
+        }
+        p {
+            color: $primary-text-color;
+            margin: 0;
+        }
+        img {
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+        }
+    }
+
+    button {
+        background-color: $primary-color;
+        color: $primary-text-color;
+        border-radius: 5px;
+        border: none;
+        padding-inline: 10px;
+        font-size: 1.2rem;
+        transition: 0.4s;
+        
+        h1 {
+            margin: 0;
+            font-size: 1.4rem;
+        }
+    
+        &:hover {
+            background-color: lighten($primary-color, 10%);
+            font-size: 1.3rem;
+        }
+    }
 }
