--- a/src/styles/components/profile.scss
+++ b/src/styles/components/profile.scss
@@ -8,6 +8,7 @@
     max-width: 800px;
 
     .profile-image {
+        align-self: center;
         width: 90px;
         height: 90px;
         border-radius: 50%;
