--- a/src/styles/utils/colors.scss
+++ b/src/styles/utils/colors.scss
@@ -1,10 +1,12 @@
-$primary-color: #610094;
+$primary-color: #6b00a4;
 $secondary-color: #3F0071;
 $tertiary-color: #2F0061;
 
-$background-color: #000000;
+$background-color: black;
 $post-color: #150050;
 
 $primary-text-color: #EEEEEE;
 $secondary-text-color: #BBBBBB;
 $link-highlight-color: #e187ff;
+
+$error-color: #c10303;
