--- a/src/styles/posts.scss
+++ b/src/styles/posts.scss
@@ -1,8 +1,8 @@
 .post-block {
-    background-color: $post-color;
-    margin: 10px;
-    border-radius: 5px;
-    padding: 10px;
+    // background-color: $post-color;
+    // margin: 10px;
+    // border-radius: 5px;
+    padding: 15px;
     display: flex;
     flex-direction: row;
     transition: background-color 0.3s;
@@ -51,7 +51,6 @@
         }
     }
 
-
     &:hover {
         background-color: lighten($post-color, 10%);
     }
@@ -64,7 +63,13 @@
     }
 
     margin-left: min(25vw, 250px);
-    margin-top: 60px;
+    margin-top: 50px;
+
+    hr {
+        margin: 0;
+        background-color: gray;
+        max-width: 800px;
+    }
 
     .no-posts {
         color: $secondary-text-color;
