--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -1,8 +1,8 @@
 @import './utils';
-@import './components';
+// @import './components';
 
-@import './users';
-@import './posts';
+// @import './users';
+// @import './posts';
 
 body {
     width: 100vw;
